[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemies/enemy_wave.gd" type="Script" id=1]

[node name="EnemyWave" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
